<resources>
    <string name="app_name">Task Done</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="title_activity_detalhes">DetalhesActivity</string>

    <string name="material_calendar_monday">Mon</string>
    <string name="material_calendar_tuesday">Tue</string>
    <string name="material_calendar_wednesday">Wed</string>
    <string name="material_calendar_thursday">Thu</string>
    <string name="material_calendar_friday">Fri</string>
    <string name="material_calendar_saturday">Sat</string>
    <string name="material_calendar_sunday">Sun</string>

    <array name="material_calendar_months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <array name="menu_onlong_click_dialog">
        <item>Edit Task</item>
        <item>Delete Task</item>
        <item>Cancel Task</item>
    </array>

    <string name="desativar_notificacao">desativar_notificacoes</string>
    <string name="apagar_tarefas_antigas">apagar_tarefas_antigas</string>

    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="selecao_data">Date</string>
    <string name="selecao_horario">Time</string>
    <string name="tarefa_a_realizar">Task to be performed!</string>
    <string name="sobre">About</string>
    <string name="configuracoes_titulo">Settings</string>
    <string name="texto_atualizar_tarefa">Update</string>
    <string name="validacao_campo_obrigatorio">Required field.</string>
    <string name="validacao_msg_erro_hora">Required Select Time</string>
    <string name="validacao_msg_erro_data">Required Select Date</string>
    <string name="sair_app_msg">Exit Application?</string>
    <string name="opcao_sim">YES</string>
    <string name="opcao_nao">NO</string>
    <string name="aba_tarefas_do_dia">Current</string>
    <string name="aba_tarefas_sem_data">No Date</string>
    <string name="aba_tarefas_geral">General List</string>
    <string name="aba_tarefas_resumo">Summary</string>
    <string name="opcao_deletar">Delete</string>
    <string name="opcao_cancelar">Cancel</string>
    <string name="rotulo_data_indefinida">No date set</string>
    <string name="titulo_toolbar_adicionar_tarefa">Add Task</string>
    <string name="notificacao_subtexto">Click for more details</string>
    <string name="escolher_opcao">Choose an Option</string>
    <string name="cancelar_tarefa">Cancel Task?</string>
    <string name="tarefa_esta_concluida">Task Completed?</string>
    <string name="desmarcar_tarefa_concluida">Deselect Finish?</string>
    <string name="deletar_tarefa">Delete Task?</string>
    <string name="titulo_appbar_editar_tarefa">Edit Task</string>
    <string name="rotulo_tarefa_cancelada">Task Canceled</string>
    <string name="validacao_msg_erro_prioridade">Select a Priority</string>
    <string name="versao_app">Version 1.0</string>
    <string name="desenvolvido_por">Developed by:</string>
    <string name="nome_desenvolvedor">Adilson S. Utiama</string>
    <string name="edit_hint_titulo_descritivo">Descriptive Title</string>
    <string name="edit_hint_anota_es_opcional">Notes (Optional)</string>
    <string name="link_tx_definir_data_e_horario">Set Date and Time?</string>
    <string name="tx_conclusao">Set Date</string>
    <string name="tx_horario">Set Time</string>
    <string name="tx_selecione_uma_prioridade">Select a Priority</string>
    <string name="prioridade_baixa">LOW</string>
    <string name="prioridade_media">MEDIUM</string>
    <string name="prioridade_alta">HIGH</string>
    <string name="prioridade_nenhum">NONE</string>
    <string name="btn_adicionar">Add</string>
    <string name="menu_opcao_editar">Edit</string>
    <string name="menu_opcao_deletar">Delete</string>
    <string name="tx_adicionado_em">Added on</string>
    <string name="tx_titulo_descritivo">Descriptive Title</string>
    <string name="tx_anotaces">Annotations</string>
    <string name="tx_prioridade">Priority</string>
    <string name="lista_vazia_nenhuma_tarefa">No Task</string>
    <string name="tx_total_de_tarefas">Total Tasks:</string>
    <string name="resumo_tx_concluidos">CONCLUDED</string>
    <string name="resumo_tx_nao_concluidos">NOT CONCLUDED</string>
    <string name="resumo_tx_cancelados">CANCELED</string>
    <string name="resumo_tx_data_indefinida">INDEFINITE DATE</string>
    <string name="email">adilson@gmail.com</string>
    <string name="pref_summary_apagar_tarefas_antigas">Delete tasks with more than 30 days or days defined by the user after added task</string>
    <string name="pref_titulo_apagar_tarefas_antigas">Delete old tasks.</string>
    <string name="pref_summary_notificacoes">On-time task alert notifications off</string>
    <string name="pref_titulo_notificacoes">Disable Notifications</string>
    <string name="menu_item_configuracoes">Settings</string>
    <string name="menu_item_sobre">About</string>
    <string name="tx_viewholder_prioridade">priority:</string>
    <string name="sair">Exit</string>
    <string name="tx_data_conclusao">Completion Date</string>
    <string name="data_inclusao">Date Included</string>
    <string name="tx_notificacao_de_tarefa">Task Notification</string>
    <string name="quant_dias_a_manter_tarefa">quant_dias_a_manter_tarefas</string>
    <string name="pref_quant_dias_titulo">Number of days</string>
    <string name="pref_summary_quant_dias">Sets amount of days to keep tasks. Default: 30 days</string>
    <string name="pref_key_aviso_tarefas_amtigas">aviso_de_tarefas_antigas</string>
    <string name="pref_titulo_aviso_tarefas_antigas">Notice of Old Tasks</string>
    <string name="pref_summary_tarefas_antigas">Enable / Disable warning when there are old tasks to remove. Default: enabled</string>
    <string name="dlg_rem_tarefas_antigas_1">Task(s) over</string>
    <string name="dlg_rem_tarefas_antigas_2">Days.</string>
    <string name="dlg_rem_tarefas_antigas_3">Continue removal of the Task(s)?</string>
    <string name="dlg_rem_tarefas_antigas_4">To disable this warning, go to the settings menu.</string>
    <string name="dlg_rem_tarefas_antigas_title">Notice of Removal of Old Tasks</string>
    <string name="opcao_prosseguir">Proceed</string>
    <string name="admob_app_id">ca-app-pub-5895689592844160~1143957563</string>
    <string name="admob_banner_block_id">ca-app-pub-5895689592844160/1832659603</string>

    <string name="admob_test_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_test_banner_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
