<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/apagar_tarefas_antigas"
        android:summary="@string/pref_summary_apagar_tarefas_antigas"
        android:title="@string/pref_titulo_apagar_tarefas_antigas"
        android:defaultValue="false"/>

    <EditTextPreference
        android:key="@string/quant_dias_a_manter_tarefa"
        android:title="@string/pref_quant_dias_titulo"
        android:summary="@string/pref_summary_quant_dias"
        android:defaultValue="30"
        android:inputType="number"/>

    <CheckBoxPreference
        android:key="@string/pref_key_aviso_tarefas_amtigas"
        android:title="@string/pref_titulo_aviso_tarefas_antigas"
        android:summary="@string/pref_summary_tarefas_antigas"
        android:defaultValue="true"/>

    <CheckBoxPreference
        android:key="@string/desativar_notificacao"
        android:summary="@string/pref_summary_notificacoes"
        android:title="@string/pref_titulo_notificacoes"
        android:defaultValue="false"/>

</PreferenceScreen>