<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#d3e4ff"
    tools:context=".activity.TarefaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_tarefa"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_tarefa">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/edit_hint_titulo_descritivo"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:maxLength="30" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_anotacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:hint="@string/edit_hint_anota_es_opcional"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout_titulo"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout_titulo"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_titulo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_anotacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences|textMultiLine"
                    android:maxLength="100" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_painel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cabin"
                android:text="@string/link_tx_definir_data_e_horario"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/painelData"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout_anotacao"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_anotacao" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/painelData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.4"
                android:fitsSystemWindows="true"
                app:layout_constraintBottom_toTopOf="@+id/btnAdicionar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_painel">

                <TextView
                    android:id="@+id/text_dataConclusao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/cabin"
                    android:text="@string/tx_conclusao"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnCalendar"
                    app:layout_constraintStart_toStartOf="@+id/btnCalendar" />

                <Button
                    android:id="@+id/btnCalendar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corner_square"
                    android:fontFamily="@font/varela_round"
                    android:padding="5dp"
                    android:text="@string/selecao_data"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/text_horario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/cabin"
                    android:text="@string/tx_horario"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnHorario"
                    app:layout_constraintStart_toStartOf="@+id/btnHorario" />

                <Button
                    android:id="@+id/btnHorario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/rounded_corner_square"
                    android:fontFamily="@font/varela_round"
                    android:padding="5dp"
                    android:text="@string/selecao_horario"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:layout_constraintBottom_toBottomOf="@+id/btnCalendar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/btnCalendar" />


                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkBox_notificacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="16dp"
                    android:text="Receber Notificação"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/btnCalendar"
                    app:layout_constraintTop_toBottomOf="@+id/btnCalendar" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btnAdicionar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:layout_marginEnd="64dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner_square"
                android:fontFamily="@font/varela_round"
                android:text="@string/btn_adicionar"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/painelData"
                app:layout_constraintVertical_bias="0.35000002" />

        </android.support.constraint.ConstraintLayout>



    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>