<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetalhesActivity">

    <TextView
        android:id="@+id/tituloTarefaDetalhe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Titulo"
        android:textAlignment="textStart"
        android:textColor="@color/defaultColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_prioridade" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dataInclusao"
        app:srcCompat="@drawable/ic_calendario" />

    <TextView
        android:id="@+id/dataInclusaoTarefaDetalhe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="10/10/2018"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/dataInclusaoTarefaDetalhe"
        app:layout_constraintStart_toEndOf="@+id/dataInclusaoTarefaDetalhe"
        app:layout_constraintTop_toTopOf="@+id/dataInclusaoTarefaDetalhe"
        app:srcCompat="@drawable/ic_data_conclusao" />

    <TextView
        android:id="@+id/textView_dataInclusao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/data_inclusao"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView_dataConclusao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tx_data_conclusao"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/dataConclusaoTarefaDetalhe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="15/10/2018 - 15:00"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/anotacoesTarefaDetalhes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Anotações"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/tituloTarefaDetalhe"
        app:layout_constraintStart_toStartOf="@+id/textView_anotacoes"
        app:layout_constraintTop_toBottomOf="@+id/textView_anotacoes" />

    <TextView
        android:id="@+id/textView_anotacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tx_anotaces"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/tituloTarefaDetalhe"
        app:layout_constraintTop_toBottomOf="@+id/tituloTarefaDetalhe" />

    <TextView
        android:id="@+id/textView_prioridade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tx_prioridade"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/prioridadeTarefaDetalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="MEDIO"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_prioridade"
        app:layout_constraintStart_toEndOf="@+id/textView_prioridade"
        app:layout_constraintTop_toTopOf="@+id/textView_prioridade" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="OK"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anotacoesTarefaDetalhes"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tx_notificacao_de_tarefa"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>